* New HTTP server with `io.fusionauth:java-http` * Code clean up